fix(select): fix text of the select component is not centered
affects: @gio-design/components

fix text of the select component is not centered

--- a/packages/components/src/components/select/style/index.less
+++ b/packages/components/src/components/select/style/index.less
@@ -6,7 +6,8 @@
 
 .@{select-prefix-cls} {
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   overflow: hidden;
   border: 1px solid transparent;
   border-radius: @radius-border-small;
@@ -33,8 +34,9 @@
 
   &-values-wrapper {
     position: relative;
-    margin-top: -2px;
-    line-height: 24px;
+    width: 100%;
+    // margin-top: -2px;
+    // line-height: 24px;
   }
 
   &-bordered {
@@ -72,6 +74,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    color: #adb2c2;
     opacity: 0.5;
   }
 
@@ -83,10 +86,10 @@
         padding: 0 32px 2px 8px;
       }
 
-      &-values-wrapper {
-        margin-top: -1px;
-        line-height: 24px;
-      }
+      // &-values-wrapper {
+      //   margin-top: -1px;
+      //   line-height: 24px;
+      // }
 
       &-item {
         margin-top: 3px;
@@ -103,9 +106,9 @@
         padding: 0 32px 7px 8px;
       }
 
-      &-values-wrapper {
-        line-height: 24px;
-      }
+      // &-values-wrapper {
+      //   line-height: 24px;
+      // }
 
       &-item {
         margin-top: 8px;
